resolved problems, fixed arrow - text wrap - its on left side on the screen above wrapping text, deleted new variable

--- a/src/components/ButtonsAndText/buttonsAndText.scss
+++ b/src/components/ButtonsAndText/buttonsAndText.scss
@@ -1,10 +1,5 @@
 @import "../../variables";
 
-@import "../../media";
-
-//fonts  
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;600;800&display=swap');
-$basic: 'Montserrat', sans-serif;
 
 
 .container_buttons_and_text{
@@ -122,3 +117,5 @@ $basic: 'Montserrat', sans-serif;
         }
     }
 }
+
+//Karolina Skorupska
