--- a/src/components/Stories/Stories.scss
+++ b/src/components/Stories/Stories.scss
@@ -1,23 +1,11 @@
 @import "../../variables";
 
-@import "../../media";
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;600;800&display=swap');
-$basic: 'Montserrat', sans-serif;
 
 .stories{
-    
-    // display: flex;
-    // flex-direction: column;
-    // justify-content: center;
-    // align-items: center;
+     font-family: $basic;
     .stories-post-container{
         width: 100%;
         margin-bottom: 30px;
-        // @media(max-width:$sm){
-                
-        //     width: 300px;
-        // }
-
 
         .stories-post-horizontal-line{
             display: block;
@@ -25,7 +13,7 @@ $basic: 'Montserrat', sans-serif;
             height: 2px;
             background-color: $grey-medium;
 
-            @media(max-width:$xs){    
+            @media(min-width:$sm){    
                 width: 300px;
             }
         }
@@ -71,13 +59,12 @@ $basic: 'Montserrat', sans-serif;
         .stories-arrow-box{
             
             display: flex;
-            justify-content: flex-end;
+            justify-content: flex-start;
             align-items: center;
             img.stories-post-arrow-up{
                 display: block;
-                padding: 30px;
+                padding: 30px 0;
                 cursor: pointer;
-                text-align: end;
             }
             img.stories-post-arrow-up-hidden{
                 display: none;
@@ -90,22 +77,14 @@ $basic: 'Montserrat', sans-serif;
             display: flex;
             flex-wrap: wrap;
             flex-direction: row;
-            justify-content: space-between;
+            justify-content: space-around;
             align-items: center;
             width: 100%;
 
             img{
                
-                @media(min-width:$xs){
-                    margin: 5px 0;
-                }
-            }
-
-            @media(max-width: $xs){
-                flex-direction: column;
-            }
-            @media(max-width: $sm){
-                justify-content: space-around;
+                margin:10px;
+    
             }
             
         }
